<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".DetalhesPlanta">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Phlebodium decumanum"
            android:textColor="#717070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fertilizante"
            android:textColor="#77240A"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulo_iluminacao"
            android:textColor="#FFC107"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Um ponto fundamental para aprender como cuidar de samambaia é compreender sua poda. Cortar as folhas é um processo necessário não só para deixar a planta mais elegante, mas também para fortalecer seu crescimento.\n
        Galhos secos e velhos consomem energia e dificultam o crescimento de novos ramos. Assim, é importante verificar como cuidar de samambaia americana ou chorona, além de aparar as partes secas e quebradiças.\n
        Esse passo, no entanto, deve ser feito com muito cuidado! Cortar demais é um grande risco, pois se a planta estiver com poucas folhas, terá menos força para realizar a fotossíntese. Para evitar problemas, corte apenas os galhos que estiverem fracos e quebradiços. "
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Como são naturais de ambientes tropicais, a umidade é um ponto importante no processo de como fazer muda de samambaia brotar! Portanto, o solo deve estar sempre molhadinho, mas sem acumular muita água. "
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="			Quando pensamos na localização de um vaso, não basta analisar a estética. É importante saber se a planta escolhida irá se adaptar àquele espaço. Por isso, o primeiro passo de como cuidar de samambaia de metro ou não é saber a localização ideal.\n

Devemos lembrar que essas são espécies tropicais, que crescem aos pés de grandes árvores. Por isso, preferem uma iluminação mais suave, sem receber os raios de sol de forma direta. Assim, dê preferência sempre por locais bem iluminados, mas protegidos do sol.\n

Outro ponto importante a se considerar é a ventilação. Samambaias não se dão bem com ventanias e preferem locais sem muitas correntes de ar. Por isso, se for colocá-las na varanda ou próximo à janela, lembra-se de buscar um espaço com certa proteção. "
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <!--Para centralizar o grupo de Viewers usando Linear-->
        <LinearLayout
            android:id="@+id/linearlayoutd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            >

            <ImageView
                android:id="@+id/imagem_agua2"
                android:layout_width="16dp"
                android:layout_height="20dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/water_drop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/txt_agua2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="agua"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imagem_agua2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageView
                android:id="@+id/imagem_luz2"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toEndOf="@+id/txt_agua2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/txt_luz2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="luz"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imagem_luz2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageView
                android:id="@+id/imagem_ambiente2"
                android:layout_width="23dp"
                android:layout_height="22dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/day_cloud_wind"
                app:layout_constraintStart_toEndOf="@+id/txt_luz2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/txt_ambiente2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="ambiente"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imagem_ambiente2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </LinearLayout>



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Samambaia"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Para simular o ambiente natural das plantas, precisamos nutrir a terra com substâncias como cálcio e potássio. "
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="sadasndjasdnasjdnbasjdka"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cuidados_especiais"
            android:textColor="#F44336"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/titulo_rega"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/titulo_poda"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>